it works now